--- a/doc/main.tex
+++ b/doc/main.tex
@@ -288,13 +288,14 @@ In this section definitions and abbreviations are explained and set in context. 
 	
 	scalability & is the capability of a system to handle growing amount of work. \\[1ex]
 	
-	slope & a slope value is the value to go from one point to another as a vector. For example from point (1,1) to point (2,3) there is a slope of 1/2.\\[1ex]
 	
-	sparse matrix & a matrix with lots of zero values, the counterpart of dense were all values fluctuate a lot.	\\ [1ex]
 	
 \end{tabular}
 \newpage
 \begin{tabular}{ p{0.20\linewidth} p{0.7437\linewidth} }
+	slope & a slope value is the value to go from one point to another as a vector. For example from point (1,1) to point (2,3) there is a slope of 1/2.\\[1ex]
+	
+	sparse matrix & a matrix with lots of zero values, the counterpart of dense were all values fluctuate a lot.	\\ [1ex]
 	
 	target & In a classificication the value or classes that needs to be predicted, where it mostly about a single feature with at least 2 classes. This can be a feature of something \\ [+1ex]
 	
@@ -336,7 +337,7 @@ For different parts of the research different datasets are chosen. There is over
 
 \subsection{MetaFeatures}
 
-\subsubsection{Mean Mutual Information}
+\subsubsection{Mean Mutual Information}\label{chapter311}
 Meta features like mean mutual information or entropy for categorical features are calculated for our enhanced dataset with duplicate feature and random features. The result is that they do little to change these values and so do not indicate reduced information even tough commonly the results deteriorate when these features are added, seen in figure \ref{fig:MMI}. However if we take the adjusted mean mutual information we can see a more clearer distinction between the permutations of the datasets, figure \ref{fig:AMMI}. With those values the noisy dataset can be more recognized as being worse than before. The normalized seen in figure \ref{fig:NMMI}  is a combination of both which shows depending on the dataset a different ranking of all three datasets.
 
 The calculation of the normalized:
@@ -375,7 +376,7 @@ $MI(U,V) = \sum_{i = 1}^{I} U \mid\sum_{j = 1}^{I} V \mid \dfrac{\mid U_i \cap V
 Feature importance calculated with a RandomForestClassifer gives an indication what features are important for the ensembled decision trees. In figures \ref{fig:FIC100}, \ref{fig:FIC3}, \ref{fig:FIN100}, \ref{fig:FIN3}, the feature importance of the added random features are shown. This makes it clear that RandomForestClassifier does not recognize these features as unimportant. There is a difference in the perceived importance of random categorical and numerical features. Even more so the distribution of random categorical features. The slope of random categorical with k=3, features importance is also steeper as it more than doubles and for numerical features it only nearly doubles. This is however not true for random categorical features with k= 100 which has an equal absolute increase but starts higher. This can be explained as more perceived variance in k=100 which might indicate better probability of differentiating between the target classes. The lack of increase can be attributed to the cap on the importance at 100$\%$. The original features might give some better results in predicting but the added features still consists of some percentage of the total amount of features. Random Forest Classifier has a limit on the amount of features considered for each split which is capped at a percentage of the total set. This is partly the reason that these random features can be considered as important in the split together with their variance. The variance gives perceived information as you look at a subset of instances the high variability shows that for some target class this feature value is this number and for the other classes the odds of different values for that feature is high. 
 \\
 
-In the figures \ref{fig:FIC},\ref{fig:FID} the feature importance of duplicates can be seen. This shows that the order of features is important as the duplicate features have less importance than their percentage of the dataset. It also means that they are not recognized as redundant for predicting. The difference between the feature importance for numerical and categorical is also shown. This is partly discussed earlier as the variance in the features and feature order. This has only a small effect 
+In the figures \ref{fig:FIC},\ref{fig:FID} the feature importance of duplicates can be seen. This shows that the order of features is important as the duplicate features have less importance than their percentage of the dataset. It also means that they are not recognized as totally redundant for prediction. The difference between the feature importance for numerical and categorical is also shown. This is partly discussed earlier as the variation in the features and feature order. This has the effect of duplicate numerical features having around 47$\%$ feature importance when the dataset is half duplicates. For categorical featuers this is only 39$\%$. The feature importance of the GradientBoostingClassifier seen in figure \ref{fig:FIGBC} shows a bit less importance for random and duplicate numerical features. The random features even start with more feature importance than the duplicate mostly due to the high variation within the duplicates. With 50$\%$ additional features the duplicates have more importance than the random features on average. 
 
 \begin{figure}[H]
 	\centering
@@ -421,9 +422,18 @@ In the figures \ref{fig:FIC},\ref{fig:FID} the feature importance of duplicates 
 	\end{subfigure}
 	\caption{Feature importance of duplicate features and their effect on categorical or numerical datasets}\label{fig:FID}
 \end{figure}
+\begin{figure}[h] 
+	\centering
+	\includegraphics[
+	width=0.65\textwidth
+	]{images/MetaFeatures/featureImportanceGBC.png}
+	\caption{Feature importance for duplicate features and random features calculated with a GradientBoostingClassifier instead of the RandomForestClassifier on a numerical dataset}
+	\label{fig:FIGBC}
+\end{figure}
+
 
 \subsection{Model Validation strategies}
-What strategies do we use to split the datasets into training and test to measure predictive accuracy, bias and variance.
+What strategies do we use to split the datasets into training and test to measure predictive accuracy, duration, bias and variance.
 \subsubsection{Cross validation} \label{cross-val}
 To easily test a single dataset once we use cross validation as it does this k times to get k splits of equal size. We can observe k classifications, to gain insight in duration time. We pick k=10 as standard as it is perceived to be a well rounded amount of folds for decent results\cite{Cross}.
 
@@ -525,6 +535,7 @@ To measure the bias and variance error factor we use the calculation of Kohavi a
 
 \subsubsection{PreProcessing}
 Preprocessing is a neccesary job for most machine learning classifiers as they are dependent on the input structure to classify. For example KNeighborsClassifier is dependent on distance between instances, if we look at categorical data the distance between instances is not always relevant. That is why experiments with specifically categorical datasets are repeated with some preprocessing for at least KNeighborsClassifier, SGDClassifier and SVC-rbf. For these classifiers a translation of categorical features seems to be neccesary \cite{KNN-Sym}\cite{SVM-sym}. The proposed preprocessing steps are OneHotEncoder and Standardscaler in that order. OneHotEncoder translates the categorical features in features corresponding to the amount of classes. Each feature is then a boolean value of being the class or not. The StandardScaler removes the mean and scales on the standard deviation. Storing the mean and std of the training set to use it to transform the test set balances the dataset accordingly. 
+\newpage
 \section{Experimental Results} \label{Chapter4}
 
 
@@ -643,22 +654,20 @@ In figure \ref{fig:FeatRem} the duration against features removed from a dataset
 
 \textbf{AdaBoost} AdaBoost classifier needs more time for least important removed feature dataset than randomly removed features. This seems similair to the RandomForestClassifier. With the important features left AdaBoost has a harder time to classify outliers which the removed features were more likely to be used for. \\
 
-\textbf{SVC-rbf} \\
-\textbf{GaussianNB} On the smallest duration \\
-\textbf{BernoulliNB} Removing the least important features from a dataset has less of an impact of decreasing the duration than removing random features. This can be due to the randomly remaining features being easier to binarize and quicker to calculate mean and variance of. \\
+\textbf{SVC-rbf} The SVC-rbf classifier needs more time for important feature in line with most other classifier, this means that with the less important feature removed, more time is needed for the decision surface calculation. This is also in line with the similairty of duration between the feature importance and correlation features being removed duration. With less correlated features being important features the odds are higher of a less linear relation between the targets. \\
 
-\textbf{GradientBoostingClassifier} As the only classifer GradientBoostingClassifier takes less time with only the most important features. This can be the nature of the stagewise steps of GradientBoostingClassfier needing less time with more successfull features than random features whos importance can be questionable. The dataset with the least correlated features hardly as any difference with the least important removed feature dataset.\\
+\textbf{GaussianNB} Removing the least important features from a dataset has less of an impact of decreasing the duration than removing random features. The effect of calculating means and variances should not have this effect as that calculation is more dependent on instances than values. The only reason can be the calculation of the maximum likelihood needing slightly more workload. The Difference between feature importance and correlation feature removing is negligible \\
 
+\textbf{BernoulliNB} The same behavior seen in the GaussianNB can be seen for the BernoulliNB. This can be due to the randomly remaining features being easier to binarize. As that is the only factor that might be influenced by values of the features. \\
 
-\newpage
+\textbf{GradientBoostingClassifier} As the only classifer GradientBoostingClassifier takes less time with only the most important features. This can be the nature of the stagewise steps of GradientBoostingClassfier needing less time with more important features than random features whos importance can be questionable. The dataset with the least correlated features hardly as any difference with the least important removed feature dataset.\\
+
 
 \paragraph{combined}
-in figure \ref{fig:Log} adding and removing features is shown.
-in figure \ref{fig:FeatManSlope} the slope is shown.
+in figure \ref{fig:FeatManLog} adding and removing features is shown.
+in figure \ref{fig:SlopeDurMan} the slopes are shown for adding and removing the features. The two different calculation styles show what the difference in measuring has for influence. Figure \ref{fig:FeatManSlope1Log} has the most balanced approach as basing the calculation on the clean dataset reduces the influence of outliers. The slopes in figure \ref{fig:SADS} are also considered in these results.
 
-
-
-
+For most classifiers the results paint a clear picture. Removing features has more impact on duration as adding additional features, the general trendline is mostly linear for adding features and less linear for feature removing. In figure \ref{fig:FeatManSlope1Log} there is a decrease of the duration slope from the minimal to the clean dataset. Averaging these results gives a slope close to the slope found in only adding features. Another strange behaviour is around the full dataset results there is a drop in the slope. For SGDClassifier there is nearly no difference in duration between 90$\%$ and 100$\%$ features of the dataset seen as the slope dropping outside of the picture. For most classifiers there is a similair but less drastic drop. The drop can be seen in figure \ref{fig:FeatManSlope1Log} as being low. This is because the difference between instances is small and the duration calculcation is inaccurate. With the short duration needed needed for training and prediction in the SGDClassifier the difference can be larger between the results. 
 
 \begin{figure}[H]
 	\centering	
@@ -674,20 +683,22 @@ in figure \ref{fig:FeatManSlope} the slope is shown.
 		\includegraphics[
 		width=0.65\textwidth
 		]{images/scalability/FeatManSlopeLog.png}
-		\caption{features removed randomly and features   duplicatedd with a log scale of \ref{fig:FeatManLog}}
+		\caption{features removed randomly and features   duplicated with a log scale }
 		\label{fig:FeatManSlopeLog}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.45\textwidth}
 		\includegraphics[
 		width=0.65\textwidth
-		]{images/scalability/FeatManLog.png}
-		\caption{features removed randomly and features   duplicatedd with a log scale}
+		]{images/scalability/FeatManSlope1Log.png}
+		\caption{features removed randomly and features   duplicated slope based on the average point of a clean dataset, with a log scale}
 		\label{fig:FeatManSlope1Log}
 	\end{subfigure}
 	
-	\caption{Slopes of Feature percentage total duration of the original dataset}
+	\caption{Slopes of Feature percentage total duration of the original dataset calculated from figure \ref{fig:FeatManLog}.}
 	\label{fig:SlopeDurMan}
 \end{figure}
+
+
 
 
 \newpage
@@ -705,10 +716,21 @@ in figure \ref{fig:FeatManSlope} the slope is shown.
 	\centering
 	\includegraphics[
 	width=0.65\textwidth
+	]{images/scalability/InstancesPredictionSlope.png}
+	\caption{The slopes are calculated from the results in \ref{fig:Instances} }
+	\label{fig:InstancesPredSlope}
+\end{figure}
+
+\begin{figure}[h] 
+	\centering
+	\includegraphics[
+	width=0.65\textwidth
 	]{images/scalability/InstancesPrediction.png}
 	\caption{the dataset is reduced to a fraction of the initial dataset. A prediction is made of the duration of classification and prediction per dataset, indicated by the dotted line }
 	\label{fig:InstancesPred}
 \end{figure}
+
+
 
 \textbf{RandomForestClassifier} \\
 \textbf{KNeighborsClassifier} \\
@@ -720,52 +742,95 @@ in figure \ref{fig:FeatManSlope} the slope is shown.
 \textbf{GradientBoostingClassifier} \\
 
 \paragraph{Prediction}
-For scalability it is easier to predict then for accuracy. The lines for the duration increase are on a log scale nearly linear. This makes for an easy fit with a linear line with log preprocessing. In \cite{fig:Instances} you can see that the averaged results of an instance scalability has a good fit. However if we try to predict on an individual bases per dataset the results are less promising \cite{fig:InstancesPred}. Here we tried fitting a KernelRidge with some additional meta features. The meta features include the number of instances,features,numeric features ,categorical featueres and number of classes. 
+For scalability it is easier to predict then for accuracy. The lines for the duration increase are on a log scale nearly linear. This makes for an easy fit with a linear line with log preprocessing. In figure \ref{fig:Instances} you can see that the averaged results of an instance scalability has a good fit. However if we try to predict on an individual bases per dataset the results are less promising(figure \ref{fig:InstancesPred}). Here we tried fitting a KernelRidge with some additional meta features. The meta features include the number of instances,features,numeric features ,categorical featueres and number of classes. 
 
 \newpage
 \subsection{Redundant features}
-We consider here both random and duplcite features as they are both redundant.
+This section focusses on feature manipulation of clean datasets and the accuracy impact. By either removing or adding features the dataset changes and maybe also the workings of classifiers. By comparing the results of a clean dataset to a manipulation in the feature dimension we see how classifiers handle these feature changes.
 
-\begin{figure}[h] 
-	\centering
+\subsubsection{Adding features}
+We consider here random, duplicate and redundant duplicate features as they are all redundant. In section \ref{chapter312} the importance and in section \ref{chapter311} the mutual information is shown which changes with the addition of certain features.\\
+
+\begin{figure}[H]
+	\centering	
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[
+		width=0.65\textwidth
+		]{images/RedudantFeature/predAddCatDup.png}
+		\caption{Adding increasingly more duplicate features to categorical datasets}
+		\label{fig:predCatDup}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[
+		width=0.65\textwidth
+		]{images/RedudantFeature/predAddCatReDup.png}
+		\caption{Adding increasingly more redundant duplicate features to categorical datasets}
+		\label{fig:predCatReDup}
+	\end{subfigure}
+\begin{subfigure}[b]{0.45\textwidth}
 	\includegraphics[
 	width=0.65\textwidth
-	]{images/RedudantFeature/predAddCatFeatureV2.png}
-	\caption{predictive accuracy for categorical datasets with added redundant features}
-	\label{fig:predCatAddFeat}
+	]{images/RedudantFeature/predAddCatRand.png}
+	\caption{Adding increasingly more random features(k = 100) to categorical datasets}
+	\label{fig:predCatRand}
+\end{subfigure}
+	
+	\caption{Predictive accuracy of categorical datasets injected with irrelevant or redundant features}
+	\label{fig:predAddCat}
 \end{figure}
 
-\begin{figure}[h] 
-	\centering
-	\includegraphics[
-	width=0.65\textwidth
-	]{images/RedudantFeature/predAddNonCatFeature.png}
-	\caption{predictive accuracy for numerical datasets with added redundant features}
-	\label{fig:predNonCatAddFeat}
+\begin{figure}[H]
+	\centering	
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[
+		width=0.65\textwidth
+		]{images/RedudantFeature/predAddNumDup.png}
+		\caption{Adding increasingly more duplicate features to numerical datasets}
+		\label{fig:predNumDup}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[
+		width=0.65\textwidth
+		]{images/RedudantFeature/predAddNumReDup.png}
+		\caption{Adding increasingly more redundant duplicate features to numerical datasets}
+		\label{fig:predNumReDup}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[
+		width=0.65\textwidth
+		]{images/RedudantFeature/predAddNumRand.png}
+		\caption{Adding increasingly more random features to numerical datasets}
+		\label{fig:predNumRand}
+	\end{subfigure}
+	
+	\caption{Predictive accuracy of numerical datasets injected with irrelevant or redundant features}
+	\label{fig:predAddNum}
 \end{figure}
+
+
 
 
 %TODO on hold asof 14/5 fault
-\textbf{RandomForestClassifier} \\
+\textbf{RandomForestClassifier} RandomForestClassifier is robust against default duplicate features with even gaining slightly better accuracy in both numerical and categorical datasets. The decrease in accuracy with adding redundant duplicate features is one of the hardest. As seen in chapter \ref{chapter312} RandomForestClassifier gives these added duplicate features less than its share of the dataset importance. The redundant duplciate feature have slightly more importance than the random numerical features and the result is far more decrease of accuracy for the redundant duplicate features. RandomForestClassifier is a ensemble method and therefor the performance does not drop dramatically on some redundant features but with a larger share the impact becomes more devisating.\\
 
-\textbf{KNeighborsClassifier} \\
+\textbf{KNeighborsClassifier} The kNN classifier the robustness against duplciate feature is good for the default setting but for the 1NN there is more variance of performance for the categorical datasets. Adding the redundant features the kNN classifier is not so robust and the accuracy drops quickly. Against the random features the most impact can be seen when introducing the features. Upon introducting of the random categorical features the accuracy drops hard 30 $\%$ accuracy. For the numerical random features this is less but in comparison it is one of the largest drops in accuracy. THis is due the numbers associated with these random features. For the categorical features with k=100 the absolute difference between features become larger than with the default classes which are incremental categories. With a class feature value in the training set of 10 and a similair class with feature value 90 the absolute difference is large between features. Without preprocessing the kNN has no robustness against these irrelevant features. \\
 
-\textbf{SGDClassifier} \\
+\textbf{SGDClassifier} SGDClassifier is robust against duplicates with the random nature of the classifier. With added duplicates with numerical datasets the classifiers fluctuates a lot. With a doubled feature size the accuracy goes up a few percentages in accuracy. For categorical datasets the performance is less positive. Mostly for adding random categorical features the accuracy drops harshly. This is mostly because the SGDClassifier cannot handle categorical data nicely without preprocessing. The increase in number of classes and so more value variation makes is harder to use those features. The robustness for numerical datasets is stronger with average robustness for redundant duplicate features.  \\
 
-\textbf{AdaBoost} \\
+\textbf{AdaBoost} The accuracy is hardly influence by duplicating features only for categorical datasets there is some slight variation between datasets. The robustness against redundant features is one of the greatest with subpar starting performance the drop in accuracy is fairly low. With similair reasons as RandomForestClassifier does the AdaBoost also give priority to the redundant duplicate features. For the random features AdaBoost is a robust classifier, with the focus on outliers AdaBoost can discredit these features as limiting the impact on the predictive accuracy. \\
 
-\textbf{SVC-rbf} \\
+\textbf{SVC-rbf} The robustness of SVC-rbf against duplicate features is similair to most classifiers. The lack of robustness against categorical datasts is mostly with the impact of these features. SVC-rbf builds on all features the decision surface and with these features being irrelevant the SVC has a harder time to correctly classify. Similair behaviour can be seen with the introduction of categorical random features. There are not misleading like redundant duplicate features but with the variation of 100 classes the SVC will fail to make a good decision surface without tuning of the C parameter to simplify the decision surface. There is more robustness for SVC with numerical random features. Handling of numerical redundant duplciate features is also not the strong suit of SVC but with a low accuracy the SVC is already underfitted on the data.  \\
 
-\textbf{GaussianNB} \\
+\textbf{GaussianNB} GaussianNB is one of the only once to lose some accuracy with duplicate categorical features. With the added features the likelihood function has a decreased performance. The dependance on all the feature is also visible with the redundant feature addition for both categorical and numerical datasets the performance drops significantly with the introduction. The classifier depends on all features to fall in the distribution with a mean and variance and the added features fall outside these values and accuracy drops. For random categorical features the GaussianNB is even the most robust with an increase in accuracy with the introduction. For numerical the accuracy stays the same. This is by virtue of the random features having a clear structure of uniform randomness which the classifiers gives no importance to in classification accuracy.   \\
 
-\textbf{BernoulliNB} \\
+\textbf{BernoulliNB} Similair to GaussianNB does BernoulliNB lose accuracy with introduction of duplicate features. As a trait of a Naïve Bayes classifier all features are given some importance and these duplicate feature have equal perfomance as the original features. As this is mostly categorical datasets  the binarization of these feature decreases the accuracy. The redudant duplicate feature addition to the dataset decreases the accuracy only slightly as seen with the introduction of duplicates the accuracy can decrease with more irrelevant features. The decrease of accuracy of the BernoulliNB is the lowest which indicates that the classifier has hardly classified correctly because of underfitting. The result is that the accuracy drops only because it depends on all features useful for prediction calculated during fitting. The addition of random feature has a similair effect as on GaussianNB namely no effect. \\
 
-\textbf{GradientBoostingClassifier} \\
+\textbf{GradientBoostingClassifier} The effect of duplicate features has a similair story to both AdaBoost and RandomForestClassifier in other words no effect. The decision trees handle the duplicate features as a bit less important than the original dataset(figure {fig:FIGBC}). This explains a less decrease in accuracy compared to the RandomForestClassifier, the classifier is less fitted to those added features and so more robust. For the random features the same is true, as it shows better performance over the RandomForestClassifier. \\
 
 \begin{table}[h]
 	\centering
 	\csvautotabular{flucRedudantFeatures.csv}
-	\caption{all change in predictive accuracy in adding certain kind of features(results from \ref{fig:predNonCatAddFeat})}\label{table:fluc}
+	\caption{all changes in predictive accuracy in adding both kind of features(results from figures \ref{fig:predAddNum} and \ref{fig:predAddCat})}\label{table:fluc}
 \end{table}
 
 
@@ -781,13 +846,22 @@ We consider here both random and duplcite features as they are both redundant.
 	\label{fig:preddFeatComp}
 \end{figure}
 
+
+
 \textbf{RandomForestClassifier}    \\
+
 \textbf{KNeighborsClassifier} \\
+
 \textbf{SGDClassifier} \\
+
 \textbf{AdaBoost} \\
+
 \textbf{SVC-rbf} \\
+
 \textbf{GaussianNB} \\
+
 \textbf{BernoulliNB} \\
+
 \textbf{GradientBoostingClassifier} \\
 
 \subsection{Noisy data}
@@ -975,9 +1049,10 @@ openml dataset identifiers per figure \\
 figure \ref{fig:predFlat} - 10,12,18 \\
 figure \ref{fig:FailDurMan} - 1038,1043,1049,1050,1176,12,1466,1468,1475,1476,1478,1479,1485,1487,1491,1492,1493,1494,14,1501,1504,1510,1515,16,22,28,300,40499,40,4134,44,4538,458 \\
 figure \ref{fig:FeatManLog} - 22, 1176, 4134, 1063, 1067, 1068, 44, 53, 4538, 458 \\
-figure \ref{fig:FeatCorImp} - 12, 1038, 14, 16, 1043, 22, 1176, 1049, 1050, 28, 1063, 1067, 1068, 300, 1466, 1467, 1468, 1475, 1476
+figure \ref{fig:FeatCorImp} - 12, 1038, 14, 16, 1043, 22, 1176, 1049, 1050, 28, 1063, 1067, 1068, 300, 1466, 1467, 1468, 1475, 1476 \\
 figure \ref{fig:FeatRemImp} - 1038, 1043, 22, 1176, 1049, 1050, 1063, 1067, 1068
-figure 
+figure \ref{fig:predAddNum} - 11, 12, 1038,14, 16, 18, 1043, 1046, 22,1176, 1049, 1050, 28,30, 32, 1570, 36, 37, 4134, 1063, 39, 40, 1067, 1068, 300, 41, 44, 1459, 40499 , 53, 1462, 1464, 54, 1466, 1467, 1468, 40509, 4538, 1475, 1476, 1478, 1479, 458,1485, 1487, 1489, 1491, 1492, 1493, 1494, 1497, 1501, 1504, 1510, 1515, 375\\ 
+figure \ref{fig:predAddCat} - 20, 21, 26, 333, 334, 335, 40668, 4135, 4534, 469, 46, 50\\
 \subsubsection{Distribution}
 The number of features and instances for datasets
 \begin{figure}[h] 
